# RAG_company

./: .gitignore  README.md  app.py  evaluator.py  pyproject.toml
.github/workflows/: ci.yml  evaluate.yml
evaluation/: run_eval.py  test.py
implementation/: answer.py  ingest.py
