[project]
name = "rag-company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.10.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
